--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "index.js"
+    "start": "index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
